[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.74"
futures = "0.3.29"
hex = "0.4.3"
list = { path = "../list"}
mockall = "0.11.4"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
