[package]
name = "block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.74"
futures = "0.3.29"
mockall = "0.11.4"
tokio = { version = "1.33.0", features = ["full"] }
waitgroup = "0.1.2"
